# git-remote-gcs

./: .gitignore  LICENSE  README.md  pyproject.toml
git_remote_gcs/: gcs_client.py  manage.py  remote.py
